# weather-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml  Lints.yml  audit.yml  build_test.yml  ci.yml  lints.yml  rust.yml
src/: api.rs  cli.rs  color.rs  data.rs  error.rs  lib.rs  main.rs  storage.rs  ui.rs
src/api/: accu_weather.rs  open_weather.rs  weather_api.rs
tests/: cli.rs
